Bug 828567 - Part a: Exact rooting for strings in jsdate.cpp; r=terrence